Add Google Verification Tag

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
     <meta property="og:description" content={description} />
     <meta property="og:image" content="/social-image.png" />
 
-    <meta name="google-site-verification" content="googlee5fb751caeed1e50" />
+    <meta name="google-site-verification" content="xy5jvx5424SPEri-DiwxTF64QS6wPfyJwjrn1Wam1ss" />
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     
